# mecab-binding

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  biome.json  build.rs  grammars.data.d.ts  ipadic.data.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: CI.yml
__test__/: grammar.spec.ts  index.spec.ts
examples/vite/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/vite/src/: App.tsx  NodeCard.tsx  mecab-binding.js  useTagger.ts  wasi-worker-browser.js
grammars/: example.grammar
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/wasm32-wasi/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
patches/: mecab-cxx17-compat.patch
scripts/: compile-dict.mjs  compile-grammar.mjs  match.mjs  scrape-grammar.mjs  test-patterns.mjs  update-patterns.mjs
scripts/copy-dynamic/: dynamic-wasi-browser.js  dynamic-wasi.cjs  dynamic-wasi.d.ts  index.js  mecab-binding.wasi-browser.js  wasi-worker-browser.mjs
src/: dict_info.rs  ffi.rs  lattice.rs  lib.rs  model.rs  node.rs  pack.rs  tagger.rs
src/grammar/: bunsetsu.rs  csv_parser.rs  lexer.rs  matcher.rs  mod.rs  parser.rs  syntax.rs  token.rs
