[package]
edition = "2021"
name = "mecab-binding"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["napi6"] }
napi-derive = "3.0.0"
csv = "1.3"
flate2 = "1"
regex-lite = "0.1"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
napi-build = "2"
cc = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
